# zero_to_production

./: Cargo.toml  README.md  log_temp.json
.github/workflows/: general.yml
migrations/: 20221025070606_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
